--- a/ABOUT.html
+++ b/ABOUT.html
@@ -14,12 +14,9 @@
                 <a class="navbar-brand me-3" href="./Homepage.html">
                     <img src="https://freepngimg.com/thumb/weather/23525-5-weather-free-download.png" height="65" width="70" loading="lazy"/>
                 </a>
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" aria-expanded="false"  >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent2">
+                <div class="navbar justify-content-between" id="navbarSupportedContent2">
                     <ul class="navbar-nav">
-                        <li class="nav-item mx-3 ">
+                        <li class="nav-item mx-3 collapse navbar-collapse">
                             <a class="nav-link text-dark fw-bold" href="./Homepage.html">WEATHER TODAY</a>
                         </li>
                         <li class="nav-item mx-3">
@@ -30,6 +27,14 @@
             </div>
         </nav>
     </div>
+    <footer class="py-3 my-4 footer fixed-bottom">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./Homepage.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">WEATHER TODAY</a>
+            </li>
+            <li class="nav-item"><a href="./ABOUT.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">ABOUT</a></li>
+          </ul>
+          <p class="text-center text-body-secondary">© 2023 P. Vasile-Calin</p>
+      </footer>
     <script src="./script.js"></script>
 </body>
 </html>
