--- a/Homepage.html
+++ b/Homepage.html
@@ -15,15 +15,12 @@
                 <a class="navbar-brand me-3" href="./Homepage.html">
                     <img src="https://freepngimg.com/thumb/weather/23525-5-weather-free-download.png" height="65" width="70" loading="lazy"/>
                 </a>
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" aria-expanded="false"  >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent2">
+                <div class=" navbar justify-content-between" id="navbarSupportedContent2">
                     <ul class="navbar-nav">
-                        <li class="nav-item mx-3 ">
+                        <li class="nav-item mx-3 collapse navbar-collapse">
                             <a class="nav-link text-dark fw-bold" href="./Homepage.html">WEATHER TODAY</a>
                         </li>
-                        <li class="nav-item mx-3"> 
+                        <li class="nav-item mx-3 "> 
                             <a class="nav-link text-dark fw-bold" href="./ABOUT.html">ABOUT</a>
                         </li>
                     </ul> 
@@ -31,16 +28,16 @@
             </div>
         </nav>
     </div>
-    <main class=" d-flex align-items-center justify-content-center pt-5 wrap-nowrap flex-column" >
+    <main class="d-flex flex-column justify-content-between align-items-center pt-5 wrap-nowrap" >
         <div class="inputDetails d-flex justify-content-center align-content-center text-center px-5">
             <p> Search for a location. Get details about the weather for the next 24h.</p>
-
         </div>
+        
         <form class="d-flex my-5" id = "formSearch">
-            <input class="form-control me-3 rounded-3 text-dark" type="text" placeholder="Search for a location.." aria-label="Search" id="citySearch">
+            <input class="form-control me-3 rounded-3 text-dark fw-bold" type="text" placeholder="Search for a location.." aria-label="Search" id="citySearch">
             <button class="btn btn-outline-dark text-dark bg-light me-3 rounded-4" type="submit">Search</button>
         </form>  
-        <div class="d-flex align-items-center justify-content-center align-content-center rounded-5 row col-6
+        <div class="d-flex align-items-center justify-content-center align-content-center rounded-5 row col-7
          text-center " id="dataPrint" >
              <span id="weatherInfo" class="fw-bold fs-4 d-flex align-items-center justify-content-center"></span>
               <span id="temperature" class="fw-bold fs-4 d-flex align-items-center justify-content-center "></span>
@@ -49,10 +46,17 @@
               <span id="humidity" class="fw-bold fs-4 d-flex align-items-center justify-content-center"></span>
               <span id="weatherDesc" class="fw-bold fs-4 d-flex align-items-center justify-content-center"></span>
          </div>
-        <div class="hoursWeatherCarousel d-flex align-content-center justify-content-center my-4 row" id="hoursWeatherCarousel">
-
+        <div class="hoursWeatherCarousel d-flex align-content-center align-items-center justify-content-center row mx-3" id="hoursWeatherCarousel">
         </div>
       </main>
       <script src="./script.js"></script>
+      <footer class="py-3 my-4 footer">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./Homepage.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">WEATHER TODAY</a></li>
+            <li class="nav-item"><a href="./ABOUT.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">ABOUT</a></li>
+          </ul>
+          <p class="text-center text-body-secondary">© 2023 P. Vasile-Calin</p>
+      </footer>
+      
 </body>
 </html>
