--- a/ABOUT.html
+++ b/ABOUT.html
@@ -27,7 +27,12 @@
             </div>
         </nav>
     </div>
-    <footer class="py-3 my-4 footer fixed-bottom">
+    <main class="d-flex flex-column justify-content-between align-items-center pt-5 wrap-nowrap row col-12" >
+        <div class="d-flex align-content-center bg-info align-items-center col-sm-8 col-md-10 col-lg-8 col-12 my-5 rounded-4 p-5 mx-auto">
+            <p class="d-flex align-content-center justify-content-center text-center fw-bold"> The "Weather-app" project is an interactive web application that provides users with weather information for their searched locations. With the help of this application, users can find details about the current weather and the forecast for the next 24 hours. The attractive and intuitive interface makes navigation easy and enjoyable for users.</p>
+        </div>
+    </main>
+    <footer class="py-3 my-4 ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="./Homepage.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">WEATHER TODAY</a>
             </li>
