--- a/ABOUT.html
+++ b/ABOUT.html
@@ -11,13 +11,13 @@
     <div class="first-container pb-3">
         <nav class="navbar navbar-expand-lg bg-info">
             <div class="container-fluid">
-                <a class="navbar-brand me-3" href="./Homepage.html">
+                <a class="navbar-brand me-3" href="./index.html">
                     <img src="https://freepngimg.com/thumb/weather/23525-5-weather-free-download.png" height="65" width="70" loading="lazy"/>
                 </a>
                 <div class="navbar justify-content-between" id="navbarSupportedContent2">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-3 collapse navbar-collapse">
-                            <a class="nav-link text-dark fw-bold" href="./Homepage.html">WEATHER TODAY</a>
+                            <a class="nav-link text-dark fw-bold" href="./index.html">WEATHER TODAY</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link text-dark fw-bold" href="./ABOUT.html">ABOUT</a>
@@ -34,7 +34,7 @@
     </main>
     <footer class="py-3 my-4 ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="./Homepage.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">WEATHER TODAY</a>
+            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">WEATHER TODAY</a>
             </li>
             <li class="nav-item"><a href="./ABOUT.html" class="nav-link px-2 text-body-secondary fw-bold text-dark">ABOUT</a></li>
           </ul>
